# agent-skills-cli

./: CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
docs/: agent-skills-design.md
src/agent_skills_cli/: __init__.py  cli.py  config.py  schema.py  sync.py
tests/: test_config_init.py  test_install_reinstall.py  test_install_reinstall_skill.py  test_schema.py
